--- a/jest/package.json
+++ b/jest/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.26.1",
     "jotai": "^2.0.3",
+    "miragejs": "^0.1.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
