--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@mswjs/data": "^0.13.0",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -39,9 +40,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.11.0",
     "husky": "^8.0.3",
+    "msw": "^1.2.3",
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
