--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,14 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", ".eslintrc.cjs", ".prettierrc.cjs", "vite.config.ts"],
+  "include": [
+    "src",
+    ".eslintrc.cjs",
+    ".prettierrc.cjs",
+    "vite.config.ts",
+    "jest.setup.ts",
+    "jest.config.cjs",
+    "public/worker/mockServiceWorker.js"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
