--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.cts .",
     "lint:no-warning": "npm run lint -- --max-warnings=0",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "cd .. && husky install jest/.husky"
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.29.19",
     "jotai": "^2.2.1",
     "miragejs": "^0.1.47",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
