--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.19",
+    "aimless.js": "^1.0.4",
     "jotai": "^2.2.1",
     "miragejs": "^0.1.47",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "uuid": "^9.0.0"
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@mswjs/data": "^0.13.0",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
